--- a/ProgramForTesting.App/ProgramForTesting.App.csproj
+++ b/ProgramForTesting.App/ProgramForTesting.App.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DB\DB.csproj" />
+    <ProjectReference Include="..\Models.lib\Models.lib.csproj" />
   </ItemGroup>
 
   <ItemGroup>
